[package]
name = "daleks"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
rand = "0.8"
xdg = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argparse = "0.2"
