[package]
name = "daleks"
version = "0.5.0"
edition = "2018"

authors = ["Alessio Piccoli <alepic@geckoblu.net>"]
description = "Escape from evil robots who want to exterminate you."
repository = "https://github.com/geckoblu-games/daleks"
homepage = "https://github.com/geckoblu-games/daleks#readme"
keywords = ["terminal", "game"]
categories = ["games"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
rand = "0.8"
xdg = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argparse = "0.2"


[package.metadata.deb]
section = "games"
priority = "optional"
assets = [["target/release/daleks", "usr/games/", "755"]]

